Fix tree label overflow so horizontal it is possilble to horizontally scroll the hierarchy view

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -690,9 +690,6 @@ body {
 }
 
 .tree-label {
-  flex: 1;
-  overflow: hidden;
-  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
